terraform/modules/kubernetes-system-monitoring/kubernetes/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.zelos.k8s.infra.erpf.de`) # Hostname to match
      kind: Rule
      services: # Service to redirect requests to
        - name: monitoring-grafana
          port: 80
  tls:
    secretName: grafana-erpf-de-tls
